--- a/style.css
+++ b/style.css
@@ -1,11 +1,46 @@
 header {
-    background-color: rgb(191, 255, 216);
+    background-color: aqua;
 }
 
 body {
-    background-color: rgb(252, 255, 177);
+    background-color: bisque;
+}
+
+.estudante-div {
+    text-align: center;
+    padding: 16px 0;
+}
+
+.estudante-titulo {
+    text-align: center;
+    padding: 16px 0;
+}
+
+.estudante-imagem {
+    width: 30%;       /* cuidado com SEU tamanho */
+}
+
+.estudante-icone {
+    width: 50px;
+    padding: 4px 8px;
+    list-style-type: none;
+}
+
+h1, h2, h3 {
+    color: #3771ed;
+    font-weight: 700;
+}
+
+a:hover {
+    color: #e80a0a;
 }
 
 footer {
-    background-color: rgb(147, 215, 255);
+    background-color: chartreuse;
+}
+
+.rodape {
+    background-color: #000000;
+    color: white;
+    text-align: center;
 }
